# WEB-Projects

CinemaBot/: Procfile  README.md  requirements.txt  tg_cinemabot.py
JSF_Example/: README.md  pom.xml
JSF_Example/src/main/webapp/: user.xhtml
JokeBot/: .gitignore  Dockerfile  Dockerfile-mod  README.md  alembic.ini  main.py  pyproject.toml
JokeBot/db/: models.py  utils.py
JokeBot/db/migrations/: env.py
JokeBot/db/migrations/versions/: d23189c8d8d7_text.py
JokeBot/scripts/: add_jokes.py  clear_tables.py  drop_tables.py
JokeBot/services/: assessment_service.py  joke_service.py  user_service.py
JokeBot/services/bert/: bert.py
JokeBot/services/chatgpt/: chat_gpt.py
JokeBot/services/translation/: google_translate.py
JokeBot/utils/: keyboard_utils.py  l10n_utils.py
ShareMoments/: README.md  pom.xml
ShareMoments/ShareMoments/src/main/webapp/: index.xhtml
ShareMoments/src/main/resources/: hibernate.cfg.xml  hibernate.reveng.xml
ShareMoments/src/main/webapp/: adminPage.xhtml  allPosts.xhtml  authorization.xhtml  createPost.xhtml  display.xhtml  index.xhtml  newsPage.xhtml  profile.xhtml  profilePage.xhtml  registration.xhtml  user.xhtml  userWall.xhtml
ShareMoments/src/main/webapp/WEB-INF/: faces-config.xml  glassfish-resources.xml  glassfish-web.xml  web.xml
testJSF/: build.xml  pom.xml
testJSF/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
testJSF/nbproject/private/: private.properties  private.xml
testJSF/src/main/webapp/: display.xhtml
testJSF/web/: display.xhtml  index.xhtml
(+49 files in other folders)
